[package]
name = "rocket-multipart"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
authors = ["Matthew Pomes <matthew.pomes@pm.me>"]
description = "Provides a `multipart/mixed` Responder implementation"
repository = "https://github.com/the10thWiz/rocket-multipart"
keywords = ["rocket", "web-server"]
license = "MIT"

[features]
default = ["rand"]
rand = ["dep:rand"]

[dependencies]
rand = { version = "0.8.5", optional = true }
rocket = { version = "0.5.1", default-features = false }

[dev-dependencies]
async-stream = "0.3.5"
